# potato

./: .gitignore  README.md
.github/workflows/: nix-build.yml
cpp/: Makefile  potatomain.cpp
hs/: default.nix  potato.cabal
